@@ -6,3 +6,4 @@ float-sample=1
 [AUTO_CONNECT]
 input=1
 output=1
+alias=1
