@@ -36,6 +36,10 @@ John Emmas
   Jackdmp changes log
 ---------------------------
 
+2012-01-20 Stephane Letz  <letz@grame.fr>
+
+	* Experimental system port alias use in WIndows JackRouter.
+
 2012-01-19 Stephane Letz  <letz@grame.fr>
 
 	* Implement shutdown for in server clients.
